@@ -62,7 +62,7 @@ public class AcmeDashboardTesting {
 				var f = new DependencyInjector(Java.getPackageClasses(AcmeDashboardTesting.class.getPackageName()),
 						AcmeDashboardTesting.INSTANCE::get);
 				a = f.create(AcmeDashboardTesting.class,
-						Java.hashMap("factory", f, "configurationFile",
+						Java.hashMap("diFactory", f, "configurationFile",
 								args.length > 0 ? Path.of(
 										args[0].startsWith("~") ? System.getProperty("user.home") + args[0].substring(1)
 												: args[0])
@@ -76,7 +76,7 @@ public class AcmeDashboardTesting {
 					c = Net.getSSLContext(Map.entry("JKS", x), "passphrase".toCharArray());
 				}
 				var p = Integer.parseInt(a.configuration.getProperty("acme-dashboard.server.port"));
-				s = a.injector.create(HttpServer.class,
+				s = a.diFactory.create(HttpServer.class,
 						Map.of("sslContext", c, "endpoint", new InetSocketAddress(p), "handler", a.handler));
 			}
 			s.serve();
@@ -87,23 +87,23 @@ public class AcmeDashboardTesting {
 
 	protected final Properties configuration;
 
-	protected final DependencyInjector injector;
+	protected final DependencyInjector diFactory;
 
 	protected final AcmeDashboardFullstack fullstack;
 
 	protected final HttpHandler handler;
 
-	public AcmeDashboardTesting(DependencyInjector injector, Path configurationFile) {
-		this.injector = injector;
+	public AcmeDashboardTesting(DependencyInjector diFactory, Path configurationFile) {
+		this.diFactory = diFactory;
 		if (!INSTANCE.compareAndSet(null, this))
 			throw new IllegalStateException();
-		configuration = injector.create(Properties.class, Collections.singletonMap("file", configurationFile));
-		fullstack = injector.create(AcmeDashboardFullstack.class,
-				Map.of("factory", new DependencyInjector(Java.getPackageClasses(AcmeDashboardFullstack.class.getPackageName()),
+		configuration = diFactory.create(Properties.class, Collections.singletonMap("file", configurationFile));
+		fullstack = diFactory.create(AcmeDashboardFullstack.class,
+				Map.of("diFactory", new DependencyInjector(Java.getPackageClasses(AcmeDashboardFullstack.class.getPackageName()),
 						AcmeDashboardFullstack.INSTANCE::get)));
 
 		{
-			var f = injector.create(ApplicationHandlerFactory.class, Map.of("methods", types().stream()
+			var f = diFactory.create(ApplicationHandlerFactory.class, Map.of("methods", types().stream()
 					.flatMap(x -> Arrays.stream(x.getMethods()).filter(y -> !Modifier.isStatic(y.getModifiers()))
 							.map(y -> new ClassAndMethod(x, y)))
 					.toList(), "files",
@@ -134,8 +134,8 @@ public class AcmeDashboardTesting {
 		return configuration;
 	}
 
-	public DependencyInjector injector() {
-		return injector;
+	public DependencyInjector diFactory() {
+		return diFactory;
 	}
 
 	public AcmeDashboardFullstack fullstack() {
@@ -147,7 +147,7 @@ public class AcmeDashboardTesting {
 	}
 
 	public Collection<Class<?>> types() {
-		return injector.types();
+		return diFactory.types();
 	}
 
 	@Render(template = "index.html")
